<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>openvslam</name>
    <version>0.0.0</version>
    <description>The ROS2 package for OpenVSLAM</description>

    <maintainer email="ichihara.mitsumasa@aist.go.jp">Mitsumasa Ichihara</maintainer>
    <maintainer email="sumikura.shinya@aist.go.jp">Shinya Sumikura</maintainer>
    <maintainer email="k.sakurada@aist.go.jp">Ken Sakurada</maintainer>

    <license>2-clause BSD</license>
    <url type="website">https://openvslam.readthedocs.io/</url>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>image_transport</depend>
    <depend>cv_bridge</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
